[ranger] teach the rifle when call the 'open'

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -160,16 +160,16 @@ name ^[mM]akefile$            = make
 #--------------------------------------------
 # Code
 #-------------------------------------------
-ext py  = python -- "$1"
-ext pl  = perl -- "$1"
-ext rb  = ruby -- "$1"
-ext sh  = sh -- "$1"
+#ext py  = python -- "$1"
+#ext pl  = perl -- "$1"
+#ext rb  = ruby -- "$1"
+#ext sh  = sh -- "$1"
 
 #--------------------------------------------
 # Audio without X
 #-------------------------------------------
-mime ^audio,      terminal, has mpv      = mpv -- "$@"
-ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
+mime ^audio,      terminal, !X, has mpv      = mpv -- "$@"
+ext midi?,        terminal, !X, has wildmidi = wildmidi -- "$@"
 
 #--------------------------------------------
 # Video/Audio with a GUI
@@ -212,6 +212,7 @@ ext cbz, has mcomix,      X, flag f = mcomix     -- "$@"
 ext cbz, has qcomicbook,  X, flag f = qcomicbook "$@"
 ext cbz, has evince,      X, flag f = evince     -- "$@"
 ext cbz, has zathura,     X, flag f = zathura    -- "$@"
+ext cb[rz], has open,        flag f = open       -- "$@"
 
 #-------------------------------------------
 # Ebooks
@@ -223,12 +224,14 @@ ext mobi, has fbreader, X, flag f = fbreader -- "$@"
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
+ext  svg,    has open,      flag f = open -a Safari -- "$@"
 mime ^image, has geeqie, X, flag f = geeqie -- "$@"
 mime ^image, has eog,    X, flag f = eog -- "$@"
 mime ^image, has sxiv,   X, flag f = sxiv -- "$@"
 mime ^image, has feh,    X, flag f = feh --start-at "$@" .
 mime ^image, has mirage, X, flag f = mirage -- "$@"
 mime ^image, has gimp,   X, flag f = gimp -- "$@"
+mime ^image, has open,      flag f = open -- "$@"
 ext xcf,                 X, flag f = gimp -- "$@"
 
 #-------------------------------------------
